--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-plugin-path-checker",
-  "version": "0.0.4",
+  "version": "0.0.6",
   "description": "plugin for fsd",
   "keywords": [
     "eslint",
@@ -15,13 +15,14 @@
     "test": "mocha tests --recursive"
   },
   "dependencies": {
+    "micromatch": "^4.0.5",
     "requireindex": "^1.2.0"
   },
   "devDependencies": {
-    "eslint": "^8.19.0",
-    "eslint-plugin-eslint-plugin": "^5.0.0",
+    "eslint": "^8.0.1",
+    "eslint-plugin-eslint-plugin": "^4.0.1",
     "eslint-plugin-node": "^11.1.0",
-    "mocha": "^10.0.0"
+    "mocha": "^9.1.3"
   },
   "engines": {
     "node": "^14.17.0 || ^16.0.0 || >= 18.0.0"
